--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,33 +4,10 @@ export(mle_imp)
 export(mle_int)
 export(simIC)
 
-importFrom(stats, dexp)
-importFrom(stats, dgamma)
-importFrom(stats, dlnorm)
-importFrom(stats, dlogis)
-importFrom(stats, dnorm)
-importFrom(stats, dweibull)
-importFrom(stats, median)
-importFrom(stats, optim)
-importFrom(stats, optimHess)
-importFrom(stats, pexp)
-importFrom(stats, pgamma)
-importFrom(stats, plnorm)
-importFrom(stats, plogis)
-importFrom(stats, pnorm)
-importFrom(stats, pweibull)
-importFrom(stats, qexp)
-importFrom(stats, qgamma)
-importFrom(stats, qlnorm)
-importFrom(stats, qlogis)
-importFrom(stats, qnorm)
-importFrom(stats, qweibull)
-importFrom(stats, rexp)
-importFrom(stats, rgamma)
-importFrom(stats, rlnorm)
-importFrom(stats, rlogis)
-importFrom(stats, rnorm)
-importFrom(stats, runif)
-importFrom(stats, rweibull)
-importFrom(stats, sd)
-importFrom(stats, setNames)
+importFrom(stats,
+  dexp, dgamma, dlnorm, dlogis, dnorm, dweibull,
+  median, optim, optimHess, pexp, pgamma, plnorm, plogis,
+  pnorm, pweibull, qexp, qgamma, qlnorm, qlogis, qnorm,
+  qweibull, rexp, rgamma, rlnorm, rlogis, rnorm, runif,
+  rweibull, sd, setNames
+)
