--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://github.com/jayarasan/simICclean
-BugReports: https://github.com/jayarasan/simICclean/issues
+URL: https://github.com/jayarasan/simIC
+BugReports: https://github.com/jayarasan/simIC/issues
